--- a/htdocs-source/Model.htm
+++ b/htdocs-source/Model.htm
@@ -1,23 +1,24 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
+<?xml version="1.0"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Performous - <+TITLE+></title>
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="icon" type="image/png" href="icon.png">
+    <link rel="stylesheet" href="style.css" type="text/css"/>
+    <link rel="icon" type="image/png" href="icon.png"/>
   </head>
 
   <body>
-    <div id=sitebox>
-      <div id="title"><img src="imgs/title.png" style="border-style: none;" alt="Performous"></div>
+    <div id="sitebox">
+      <div id="title"><img src="imgs/title.png" style="border-style: none;" alt="Performous"/></div>
 
-      <div id=menu>
+      <div id="menu">
         <ul>
           <+MENU+>
         </ul>
       </div>
 
-      <div id=main>
+      <div id="main">
         <h1><+TITLE+></h1>
         <+BODY+>
       </div>
@@ -25,4 +26,3 @@
     </div>
   </body>
 </html>
-
