WIP new theme (bluestyle)

--- a/htdocs-source/Model.htm
+++ b/htdocs-source/Model.htm
@@ -12,15 +12,18 @@
     <div id="sitebox">
       <div id="title"><img src="imgs/title.png" style="border-style: none;" alt="Performous"/></div>
 
-      <div id="menu">
-        <ul>
-          <+MENU+>
-        </ul>
-      </div>
-
-      <div id="main">
-        <h1><+TITLE+></h1>
-        <+BODY+>
+      <div id="page">
+        <div id="menu">
+          <ul>
+            <+MENU+>
+          </ul>
+        </div>
+        <div id="main">
+          <div id="content">
+            <h1><+TITLE+></h1>
+            <+BODY+>
+          </div>
+        </div>
       </div>
 
     </div>
