--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -91,8 +91,8 @@
         </div>
     </header>
 
-    <!-- Services Section -->
-    <section id="services">
+    <!-- News Section -->
+    <section id="news">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -130,7 +130,7 @@
     </section>
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio" class="bg-light-gray">
+    <section id="about" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -228,7 +228,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="about">
+    <section id="composer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -309,7 +309,7 @@
     </section>
 
     <!-- Team Section -->
-    <section id="team" class="bg-light-gray">
+    <section id="project" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -373,7 +373,7 @@
     </section>
 
     <!-- Clients Aside -->
-    <aside class="clients">
+    <aside class="download">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
