Added 2nd newsitem

--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -122,7 +122,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/startup-framework.png" class="img-responsive" alt="">
+                        <img src="img/news/Performous.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Localizations needs update</h4>
@@ -584,7 +584,7 @@
 							<p>
 								Happy performing!
 							</p>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Newsitem</button>
                         </div>
                     </div>
                 </div>
@@ -605,12 +605,14 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Heading</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/startup-framework-preview.png" alt="">
-                            <p><a href="http://designmodo.com/startup/?u=787">Startup Framework</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p>
-                            <p>You can preview Startup Framework <a href="http://designmodo.com/startup/?u=787">here</a>.</p>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            <h2>Localizations need to be updated</h2>
+                            <p class="item-intro text-muted">2013-06-17</p>
+                            <p>
+								As the next release is nigh, we are calling everybody to check that translations are correct and complete.
+								There have been numerous changes to the messages that Performous emits and thus many updates are required.
+								Please let us know if a translation still needs work.
+							</p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Newsitem</button>
                         </div>
                     </div>
                 </div>
