Added thumbnail for every newsitem

--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -136,7 +136,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="img/news/Performous.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Status Update</h4>
@@ -150,7 +150,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/golden.png" class="img-responsive" alt="">
+                        <img src="img/news/Performous.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Status Update</h4>
@@ -164,7 +164,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/escape.png" class="img-responsive" alt="">
+                        <img src="img/news/Performous.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Website, Services and docs overhaul</h4>
@@ -178,7 +178,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
+                        <img src="img/news/Performous.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Performous 0.7 released</h4>
