Added 3rd newsitem

--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -634,12 +634,34 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/treehouse-preview.png" alt="">
-                            <p>Treehouse is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies looking to showcase their apps or other projects.</p>
-                            <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.</p>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            <h2>Status Update</h2>
+                            <p class="item-intro text-muted">2013-05-05</p>
+							<p>
+								It's been a long time since the last release.
+								The new input system and other development done during the last six months offer numerous usability improvements
+								and an important bug fix for video playback on Ubuntu 13.04, so we'll be working hard to tie up the remaining loose ends and push out the next release.
+								Until then, it is highly recommended to use the Git master instead of 0.7.0.
+							</p>
+							<p>
+								We'd like to welcome the latest addition to our team: Niek Nooijens is a C++ programmer whose first feature is playlist support.
+								The playlists and an earlier songmenu branch, implementing better navigation and new looks for the song selector,
+								are now merged to the master branch, and will be part of the next release.
+							</p>
+							<p>
+								On the Rasperry Pi front things aren't as bright, as the hardware seems to be way too slow to even run the main menu smoothly.
+								If you are familiar with optimizing for this platform, help is certainly welcome.
+								Even if it cannot work, the work done for RasPi will be very useful for other GLES 2.0 platforms such as 
+								smart phones and tablets (especially so with HDMI and USB-OTG adapters!).
+							</p>
+							<p>
+								We are hitting a dead end on the encrypted SingStar PS3 files.
+								These seem to be encrypted in AES128-CTR mode but we haven't been able to extract the keys.
+								Known plain text attacks have been successful but they don't get us very far because different SingStar releases use different keys.
+							</p>
+							<p>
+								We are still looking for 2D and 3D artists so if you'd prefer Performous not looking ugly, please contact us (Use the Webchat)!
+							</p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Newsitem</button>
                         </div>
                     </div>
                 </div>
