Added 5th newsitem

--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -722,7 +722,7 @@
 							<p>
 								You may contact us by Webchat (IRC) or Feedback (issue tracker).
 							</p>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Newsitem</button>
                         </div>
                     </div>
                 </div>
@@ -744,12 +744,23 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/escape-preview.png" alt="">
-                            <p>Escape is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Escape is a one page web template that was designed with agencies in mind. This template is ideal for those looking for a simple one page solution to describe your business and offer your services.</p>
-                            <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/escape-one-page-psd-web-template/">FreebiesXpress.com</a>.</p>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            <h2>Website, services and docs overhaul</h2>
+                            <p class="item-intro text-muted">2012-11-17</p>
+							<p>
+								We are currently migrating our services from SF.net and self-hosted to GitHub.
+								Git on SF.net has always been operating very slowly and there no longer seems to be any reason to stay there.
+								GitHub seemed like the most sensible option.
+								Their servers are always up, everything runs fast and we'll be able to get most of the services that we need
+								under same roof without developers having to register to a number of separate services.
+							</p>
+							<p>
+								<h3>Upstream URL</h3>
+								Those with existing git clones from SF.net will need to change the upstream URL:
+								<ul style="text-align:left">
+									<li>git remote set-url origin git://github.com/performous/performous.git</li>
+								<ul>
+							</p>
+							<button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
                 </div>
