added More News button. TODO: Make page for all news items

--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -186,6 +186,13 @@
                     </div>
                 </div>
             </div>
+			
+			<!-- TODO: Make Page for all news items -->
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<a href="#news" class="btn btn-xl">More News</a>
+				</div>
+			</div>
         </div>
     </section>
 
@@ -532,10 +539,10 @@
         </div>
     </footer>
 
-    <!-- Portfolio Modals -->
-    <!-- Use the modals below to showcase details about your portfolio projects! -->
+    <!-- News Modals -->
+    <!-- Use the modals below to showcase details about your newsitem! -->
 
-    <!-- Portfolio Modal 1 -->
+    <!-- News Modal 1 -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -548,7 +555,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <!-- Project Details Go Here -->
+                            <!-- News Details Go Here -->
                             <h2>Performous 1.0 Released</h2>
                             <p class="item-intro text-muted">2014-11-01</p>
                             <p>
@@ -592,7 +599,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 2 -->
+    <!-- News Modal 2 -->
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -605,6 +612,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
+							<!-- News Details Go Here -->
                             <h2>Localizations need to be updated</h2>
                             <p class="item-intro text-muted">2013-06-17</p>
                             <p>
@@ -620,7 +628,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 3 -->
+    <!-- News Modal 3 -->
     <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -633,7 +641,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <!-- Project Details Go Here -->
+                            <!-- News Details Go Here -->
                             <h2>Status Update</h2>
                             <p class="item-intro text-muted">2013-05-05</p>
 							<p>
@@ -669,7 +677,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 4 -->
+    <!-- News Modal 4 -->
     <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -682,7 +690,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <!-- Project Details Go Here -->
+                            <!-- News Details Go Here -->
                             <h2>Status Update</h2>
                             <p class="item-intro text-muted">2012-12-17</p>
 							<p>
@@ -730,7 +738,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 5 -->
+    <!-- News Modal 5 -->
     <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -743,7 +751,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <!-- Project Details Go Here -->
+                            <!-- News Details Go Here -->
                             <h2>Website, services and docs overhaul</h2>
                             <p class="item-intro text-muted">2012-11-17</p>
 							<p>
@@ -768,7 +776,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 6 -->
+    <!-- News Modal 6 -->
     <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -781,7 +789,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <!-- Project Details Go Here -->
+                            <!-- News Details Go Here -->
                             <h2>Performous 0.7 Released</h2>
                             <p class="item-intro text-muted">2012-11-13</p>
                             <img class="img-responsive img-centered" src="img/news/Performous-0.7-songs.jpg" alt="Performous 0.7 Song Browser">
